# gomoku_ai_c

./: CMakeProject1.cpp  README.md
mtdf_depth_limited/: CMakeLists.txt  mtdf_depth_limited.cpp  mtdf_depth_limited.h
negamax_depth_limited/: CMakeLists.txt  negamax_depth_limited.cpp
negascout_depth_limited/: CMakeLists.txt  negascout_depth_limited.cpp  negascout_depth_limited.h
