# CMakeList.txt : CMake project for CMakeProject1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (negamax_depth_limited "negamax_depth_limited.cpp" "negamax_depth_limited.h")

# TODO: Add tests and install targets if needed.
