# CMakeList.txt : CMake project for negascout_depth_limited, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (negascout_depth_limited "negascout_depth_limited.cpp" "negascout_depth_limited.h")

# TODO: Add tests and install targets if needed.
